--- a/frontend/mhwFrontend/src/index.css
+++ b/frontend/mhwFrontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ .curvy-text {
+    font-family: 'Arial', sans-serif;
+ 
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  } 
